--- a/index.html
+++ b/index.html
@@ -40,27 +40,24 @@
             </div>
 
             <div class="chat-big-window">
+                
                 <div class="chat-window">
-                    <div class="chats">
-                        <div class="user-join">
-                            <p><b>Jarvis</b> joined the chat</p>
-                        </div>
-                        <div class="message">
-                            <h5>Jarvis</h5>
-                            <p>Hello Ultron</p>
-                        </div>
-                        <div class="message outgoing">
-                            <h5>Veronica</h5>
-                            <p>Welcome Jarvis</p>
-                        </div>
-                    </div>
+                    <img src="icons/Screenshot 2024-09-14 at 10.32.15 PM.png" alt="">
+                    <img src="icons/Screenshot 2024-09-14 at 11.19.04 PM.png" alt="">
+                    <img src="icons/Screenshot 2024-09-14 at 10.32.15 PM.png" alt="">
+                    <img src="icons/Screenshot 2024-09-14 at 11.19.04 PM.png" alt="">
+                    <img src="icons/Screenshot 2024-09-14 at 10.32.15 PM.png" alt="">
                 </div>
 
 
                 <div class="user-input">
-                    <input type="text" placeholder="Type your message...">
+                    <input type="file" accept="image/jpeg, image/png, image/jpg" placeholder="Type your message...">
                     <button>SEND</button>
                 </div>
+
+                <script>
+                    let profilePic = document
+                </script>
 
             </div>
 
@@ -91,7 +88,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 ChatCat. All rights reserved.</p>
+        <p>Copyright &copy; 2024 by Mahir Mahbub Islam | All Rights Reserved.</p>
+        <a href="https://www.vecteezy.com/free-vector/chat">Chat Vectors by Vecteezy</a>
     </footer>
 
 </body>
