--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <!-- User profile list, currently there is only one user that is coded into the users-list class -->
                 <div class="users-list">
                     <p id="user-myprofile">My Profile</p>
+
+                    <!-- Add the download button -->
+                    <button id="download-zip-button">Download All Images as ZIP</button>
                 </div>
             </div>
 
@@ -59,12 +62,14 @@
                     <div id="error"></div>
                 </div>
 
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+
                 <!-- Script for uploading, displaying and saving the pictures -->
                 <script src="./scripts/chatScript.js"></script>
             </div>
 
         </div>
-        
+
         <!-- Script for the chat window to vanish and act as a pop up menu when the window gets minimised -->
         <script src="./scripts/vanishWindow.js"></script>
     </main>
